--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,15 @@
 .card:hover {
     transform: scale(1.1);
 }
+.score-box {
+    width: 150px;
+    margin: 20px auto;
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    background-color: #fff;
+    border: 2px solid #444;
+    border-radius: 5px;
+    color: #333;
+    font-weight: bold;
+}
