--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,3 +46,16 @@
     object-fit: cover;
     transition: transform 0.2s;
 }
+/* Style for flipping the card */
+
+.card.flip {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+/* Style when the card is flipped */
+.card.flipped .card.flip {
+    transform: rotateY(180deg);
+}
