--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     gap: 0.5px;
+    perspective: 1000px;
 }
 
 .card {
@@ -23,7 +24,7 @@
     font-size: 24px;
     cursor: pointer;
     transition: transform 0.2s;
-    padding: 0px
+    padding: 0px;
     perspective: 1000px;
 }
 .card:hover {
@@ -37,17 +38,16 @@
     transition: transform 0.2s;
 }
 /* Style for flipping the card */
-
-.card-inner.flipped {
+.card-inner {
     position: relative;
     width: 100%;
     height: 100%;
     transition: transform 0.6s;
     transform-style: preserve-3d;
 }
-/* Style when the card is flipped */
+/* Style to flip the card */
 .card-inner.flipped {
-    transform: rotateY(180deg);
+   transform: rotateY(180deg);
 }
 
 .card-front,
