--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,41 @@
-.cardbox {
-    width: 340px;
-    height: 500px;
-    margin: 30px auto;
-    padding: 0px;
-    border: 3px solid #333;
-    background-color: #ffffcc;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5px;
-    perspective: 1000px;
+
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
+/* Navbar styles */
+body {
+  margin: 0;
+  font-family: 'Bangers', cursive, sans-serif;
+  background-color: #fdf6e3;;
 }
+.navbar {
+      background-color: #0c2340;
+      overflow: hidden;
+      border-bottom: 5px solid orange
+    }
+    .navbar a {
+      float: left;
+      display: block;
+      color: orange;
+      text-align: center;
+      padding: 14px 20px;
+      text-decoration: none;
+      font-size: 20px;
+      transition: background-color 0.3s, color 0.3;
+
+    }
+    .navbar a:hover {
+      background-color: orange;
+      color: #0c2340;
+    }
+    .content {
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      color: #ff0202;
+      font-size: 3em;
+    }
+/* Cardbox styles */
 
 .card {
     width: 80px;
@@ -68,7 +92,7 @@
   transform: rotateY(180deg);
   background-color: #fff;
 }
-
+/* Scorebox style */
 .score-box {
     width: 150px;
     margin: 20px auto;
