--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
       text-align: center;
       padding: 14px 20px;
       text-decoration: none;
-      font-size: 20px;
+      font-size: 50px;
       transition: background-color 0.3s, color 0.3;
 
     }
@@ -35,73 +35,9 @@ body {
       color: #ff0202;
       font-size: 3em;
     }
-/* Cardbox styles */
-
-.card {
-    width: 80px;
-    height: 120px;
-    background-color: #eee;
-    border: 2px solid #aaa;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    cursor: pointer;
-    transition: transform 0.2s;
-    padding: 0px;
-    perspective: 1000px;
-}
-.card:hover {
-    transform: scale(1.1);
-}
-
-.card img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.2s;
-}
-/* Style for flipping the card */
-.card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-}
-/* Style to flip the card */
-.card-inner.flipped {
-   transform: rotateY(180deg);
-}
-
-.card-front,
-.card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-.card-front {
-  background-color: #ccc;
-}
-
-.card-back {
-  transform: rotateY(180deg);
-  background-color: #fff;
-}
-/* Scorebox style */
-.score-box {
-    width: 150px;
-    margin: 20px auto;
-    padding: 10px;
-    font-size: 20px;
-    text-align: center;
-    background-color: #fff;
-    border: 2px solid #444;
-    border-radius: 5px;
-    color: #333;
-    font-weight: bold;
+.logo {
+  width: 150px;
+  height: auto;
+  display: block;
+  margin: 10px auto;
 }
