--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -87,36 +87,40 @@ body {
   background-color: #fdf6e3;;
 }
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  position: relative;
   background-color: #0c2340;
-  padding: 10px 30px;
+  padding: 20px 30px;
   border-bottom: 5px solid rgb(248, 94, 5);
-  flex-wrap: wrap;
+  height: 80px;
 }
 /* Title and logo styles */
 .title {
-  display: flex;
-  align-items: center;
-  gap: 20px;
+    position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
 }
 
 .title .logo {
-  width: 80px;
+  width: 60px;
   height: auto;
   display: block;
+  margin:0 auto 5px auto;
 }
 
 .title h1 {
   font-size: 2.5em;
   color: rgb(248, 94, 5);
   margin: 0;
+  line-height: 1;
 }
 
 .nav-links {
   display: flex;
   gap: 20px;
+  position: absolute;
+  left: 30px;
+  bottom: 0;
 }
 
 .nav-links a {
@@ -132,7 +136,7 @@ body {
   background-color: orange;
   color: #0c2340;
 }
-    .modal {
+ .modal {
   display: none;
   position: fixed;
   z-index: 999;
@@ -164,6 +168,7 @@ body {
   font-size: 30px;
   font-weight: bold;
   cursor: pointer;
+  z-index: 1000;
 }
 
 
