--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
-
 /* Cardbox styles */
 .cardbox {
   display: flex;
@@ -10,12 +9,14 @@
   width: 340px;               
   height: 480px;               
   margin: 0 auto;
+  margin-top: 40px;
   /* Background images style */
   background-repeat: no-repeat;
   background-size: cover;      
   background-position: center; 
   position: relative;
   z-index: 0;
+  background: none;
 }
 
 /* Card styles */
@@ -100,8 +101,24 @@
 body {
   margin: 0;
   font-family: 'Bangers', cursive, sans-serif;
-  background-color: #fdf6e3;;
+  /* Background image*/
+  background-image: url('../images/backgroundimage1.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 100vh;
 }
+  body::before {
+  content: "";
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); /* Darken background */
+  z-index: -1;
+}
+
 .navbar {
   position: relative;
   background-color: #0c2340;
