--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -153,7 +153,7 @@ html, body {
   justify-content: center; /* Centers the cards horizontally */
   width: 100%; /* Takes full width */
   max-width: 400px; /* Limits the max width */
-  margin: 50px auto; /* Centers the cardbox and adjusts top margin */
+  margin: 150px auto; /* Centers the cardbox and adjusts top margin */
   background: none;
   gap: 0px; /* Adds spacing between cards */
   max-height: 480px;
@@ -240,24 +240,24 @@ html, body {
 }
 /* Modal Styles */
 .modal {
-  display: none; /* Initially hidden */
-  position: fixed; /* Fixed modal position */
+  display: none;
+  position: fixed;
   z-index: 999;
   left: 0;
   top: 0;
-  width: 100%; /* Full-screen modal */
+  width: 100%;
   height: 100%;
-  overflow: auto; /* Scroll if content overflows */
+  overflow: auto;
   background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
 }
 
 .modal-content {
-  background-color: #fdf6e3; /* Modal background color */
-  margin: 10% auto; /* Centers modal content */
+  background-color: #fdf6e3;
+  margin: 10% auto;
   padding: 20px;
-  border: 3px solid orange; /* Orange border around modal */
-  width: 80%; /* Modal width */
-  max-width: 800px; /* Max width */
+  border: 3px solid rgb(248, 94, 5);
+  width: 80%;
+  max-width: 800px;
   font-family: 'Bangers', cursive;
   color: #0c2340;
   position: relative;
@@ -265,7 +265,7 @@ html, body {
 
 .modal .close,
 .modal .close-win {
-  color: #000;
+  color: rgb(216, 79, 0);
   position: absolute;
   right: 20px;
   top: 10px;
@@ -273,6 +273,31 @@ html, body {
   font-weight: bold;
   cursor: pointer;
   z-index: 1000;
+}
+
+/* Instruction Modal */
+#instructionsModal .modal-content {
+  background-image: url('../images/sidebarimage3.jpg'); /* Link to instruction modal background */
+  background-size: cover;
+  background-position: center;
+  color: rgb(0, 0, 0);
+  font-size: 35px;
+}
+
+#instructionsModal iframe {
+  border-radius: 10px;
+  border: none;
+}
+#startGame {
+  color:rgb(216, 79, 0);
+  padding: 10px 20px;
+  font-size: 24px;
+  font-family: 'Bangers', cursive;
+  cursor: pointer;
+  background-color: #ffcc00;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
 /* Tablet screens (max width: 900px) */
@@ -353,6 +378,7 @@ html, body {
 .title h1 {
   font-size: 1.5em;
 }
+
 .title .logo {
   width: 40px;
 }
